new page layout

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -58,7 +58,13 @@
 
         @fragments.header()
 
-        @content
+        <div class="page-container__background-image"></div>
+
+        <div class="page-container">
+
+            @content
+
+        </div>
 
         @fragments.footer()
 
