--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -24,7 +24,10 @@ $unitHeight: 36px;
 $inArticleInlineImgWidth: 114px;
 $trailblockImgWidth: 100%;
 $trailblockImgWidthLarge: 140px;
-$headerHeight: 57px;
+$mobilePopupOffset: 55px;
+$headerHeight: 112px;
+$headerMargin: 130px;
+$pageImageIndent: 290px;
 
 
 // Guss defaults overrides
