Basic page layout

--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -25,36 +25,34 @@
         </div>
         <div class="package-container">
             <h2 class="package-container__header">Select the package you would like to switch to:</h2>
-            <div class="content__container">
-                <section class="l-row l-row--items-3">
-                    @fragments.tier.benefits(currentTier, Tier.Friend) {£(Free)} {
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio.</p>
-                        <ul class="package__list-element">
-                            <li>Book Live event tickets</li>
-                        </ul>
-                    }
-                    @fragments.tier.benefits(currentTier, Tier.Partner) {£15 <span class="package__pcm">pcm</span>} {
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
-                        <ul class="package__list-element">
-                            <li>Welcome pack</li>
-                            <li>Early booking for live events (1 week before general release)</li>
-                            <li>20% discount on tickets and plus ones</li>
-                            <li>20% discount on Masterclasses</li>
-                        </ul>
-                    }
-                   @fragments.tier.benefits(currentTier, Tier.Patron) {£60 <span class="package__pcm">pcm</span>} {
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
-                        <ul class="package__list-element">
-                            <li>Patron pack</li>
-                            <li>Invited to patron only events</li>
-                            <li>Invited to annual patron forum</li>
-                            <li>Drinks from The Guardian wine rack</li>
-                            <li>Early booking for live events (2 weeks before general release)</li>
-                            <li>20% discount on tickets and plus ones</li>
-                            <li>20% discount on Masterclasses</li>
-                        </ul>
-                    }
-                </section>
+            <div class="package-list">
+                @fragments.tier.benefits(currentTier, Tier.Friend) {£(Free)} {
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio.</p>
+                    <ul class="package__list-element">
+                        <li>Book Live event tickets</li>
+                    </ul>
+                }
+                @fragments.tier.benefits(currentTier, Tier.Partner) {£15 <span class="package__pcm">pcm</span>} {
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
+                    <ul class="package__list-element">
+                        <li>Welcome pack</li>
+                        <li>Early booking for live events (1 week before general release)</li>
+                        <li>20% discount on tickets and plus ones</li>
+                        <li>20% discount on Masterclasses</li>
+                    </ul>
+                }
+               @fragments.tier.benefits(currentTier, Tier.Patron) {£60 <span class="package__pcm">pcm</span>} {
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet felis nec nulla dignissim laoreet ut ac odio. </p>
+                    <ul class="package__list-element">
+                        <li>Patron pack</li>
+                        <li>Invited to patron only events</li>
+                        <li>Invited to annual patron forum</li>
+                        <li>Drinks from The Guardian wine rack</li>
+                        <li>Early booking for live events (2 weeks before general release)</li>
+                        <li>20% discount on tickets and plus ones</li>
+                        <li>20% discount on Masterclasses</li>
+                    </ul>
+                }
             </div>
             <div class="content__container content__container--border-dark content__footer">
                 <ul class="inline-list">
@@ -62,7 +60,7 @@
                     <li class="inline-list__item">&#149;</li>
                     <li class="inline-list__item"><a href="#help">Email User help</a></li>
                     <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item"><a href="/tier/cancel/confirm">Cancel Membership</a></li>
+                    <li class="inline-list__item"><a href="/tier/cancel">Cancel Membership</a></li>
                 </ul>
             </div>
         </div>
