Remove implicit date to string convertors
We are getting into a lot of mess around whether we want dates to appear
with times or without. Part of this problem is the implicit ".pretty"
doesn't tell us what it is going to return

Added prettyDate and prettyDateWithTime instead of the implicits so we
have to explicitly state which format we want

--- a/frontend/app/views/fragments/joiner/thankyou/paymentSummary.scala.html
+++ b/frontend/app/views/fragments/joiner/thankyou/paymentSummary.scala.html
@@ -18,7 +18,7 @@
                 Start Date
             </td>
             <td class="summary-table__cell">
-                @subscription.start.pretty
+                @prettyDate(subscription.start)
             </td>
         </tr>
         <tr class="summary-table__row" role="row">
@@ -46,7 +46,7 @@
                 Next Payment
             </td>
             <td class="summary-table__cell">
-                @subscription.current_period_end.pretty
+                @prettyDate(subscription.current_period_end)
             </td>
         </tr>
         <tr class="summary-table__row" role="row">
