--- a/frontend/common/app/assets/stylesheets/pages/_tier.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_tier.scss
@@ -22,7 +22,7 @@
     @include rem((
         padding-bottom: $gs-gutter,
     ));
-    @include mq(tablet){
+    @include mq(tablet) {
         @include rem((
             margin-bottom: 40px
         ));
@@ -90,7 +90,7 @@
         @include rem((
             margin: $gs-baseline 0
         ));
-         @include faux-bullet-point(#333333, $right-space: 4px);
+        @include faux-bullet-point(#333333, $right-space: 4px);
 
     }
 }
@@ -109,14 +109,14 @@
 .upgrade__payment-label {
     display: block;
     position: relative;
-    border: 1px solid #ccc;
+    border: 1px solid #cccccc;
     padding: $gs-baseline/2 $gs-baseline $gs-baseline/2 $gs-baseline*2;
     @include border-radius(5px);
 
     span {
         display: block;
         @include fs-textsans(4);
-        margin: 0 0 $gs-baseline 0;
+        margin: 0 0 $gs-baseline;
         &.payment-label__title {
             @include fs-headline(2);
         }
