--- a/frontend/common/app/assets/stylesheets/_masterclass.scss
+++ b/frontend/common/app/assets/stylesheets/_masterclass.scss
@@ -7,13 +7,13 @@
         width: 251px,
         height: 40px
     ));
-    background: url("/assets/images/header/masterclasses_mobile.png");
+    background: url('/assets/images/header/masterclasses_mobile.png');
 
-    @include mq(tablet){
+    @include mq(tablet) {
         @include rem((
             width: 458px,
             height: 73px
         ));
-        background: url("/assets/images/header/masterclasses.png");
+        background: url('/assets/images/header/masterclasses.png');
     }
 }
