--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -6,15 +6,13 @@
 // Note: Sass 3.3.0 adds Local and local vars
 // http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables
 
-
 // Support
 // =============================================================================
 
-$old-ie:      false !default;
+$old-ie: false !default;
 $svg-support: true !default;
 $browser-supports-columns: true !default;
 $browser-supports-flexbox: true !default;
-
 
 // Layout dimensions
 // =============================================================================
@@ -29,14 +27,12 @@ $headerHeight: 112px;
 $headerMargin: 130px;
 $pageImageIndent: 290px;
 
-
 // Guss defaults overrides
 // =============================================================================
 
 $guss-column-rule: none;
 
-@import "components/bower-components/guss-grid-system/grid-system";
-
+@import 'components/bower-components/guss-grid-system/grid-system';
 
 // Breakpoints
 // =============================================================================
@@ -47,24 +43,21 @@ $guss-column-rule: none;
 // NB. If these change, please update dfp.js to match
 
 $mq-breakpoints: (
-        mobile:  gs-span(4)  + $gs-gutter,   // 320px
-        tablet:  gs-span(9)  + $gs-gutter*2, // 740px
-        desktop: gs-span(12) + $gs-gutter*2, // 980px
-        wide:    gs-span(16) + $gs-gutter*2, // 1300px
-
-  // Tweakpoints
-        mobileLandscape: gs-span(6) + $gs-gutter, // 480px
-
+    mobile: gs-span(4)  + $gs-gutter, // 320px
+    tablet: gs-span(9)  + $gs-gutter*2, // 740px
+    desktop: gs-span(12) + $gs-gutter*2, // 980px
+    wide: gs-span(16) + $gs-gutter*2, // 1300px
+    // Tweakpoints
+    mobileLandscape: gs-span(6) + $gs-gutter, // 480px
 );
-
 
 // Fonts
 // =============================================================================
 
-$sans-serif: "AgateSans", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-$serif: "EgyptianText", georgia, serif;
-$serifheadline: "EgyptianHeadline", georgia, serif;
-$text-sans: "TextSans", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$sans-serif: 'AgateSans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+$serif: 'EgyptianText', georgia, serif;
+$serifheadline: 'EgyptianHeadline', georgia, serif;
+$text-sans: 'TextSans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 
 // Font scale
 // Usage:
@@ -141,7 +134,6 @@ $c-neutral8: #f6f6f6;
 $c-live: #e81818;
 $c-media-icon: #fbba0f;
 
-
 // Tones
 // =============================================================================
 
@@ -155,22 +147,21 @@ $c-featuresVariant: #7d0068;
 $c-commentDefault: #e6711b;
 $c-commentAccent: #ffbb00;
 
-
 // Zones
 // =============================================================================
 
 // Note: try to at least alphabetise these within sections
 
-$articleOrange: #e47a39; //Used for live-blogging
+$articleOrange: #e47a39;
+//Used for live-blogging
 $businessBlue: #004179;
 $commentBlue: #004179;
-$culturePink: #D1008B;
+$culturePink: #d1008b;
 $environmentGreen: #4a7801;
 $lifeandstyleOrange: #ea721e;
 $moneyPurple: #7d0068;
 $newsRed: #d61d00;
 $travelBlue: #066ec9;
-
 
 // Football
 // =============================================================================
@@ -182,7 +173,6 @@ $c-sportDark: #003f64;
 $c-sportHome: $c-sportBright;
 $c-sportAway: $c-sportDark;
 
-
 // Stati
 // =============================================================================
 
@@ -190,16 +180,16 @@ $c-statusPositive: #6ca843;
 $c-statusNeutral: $c-neutral2;
 $c-statusNegative: #da1d1d;
 
-
-@import "components/bower-components/guss-colours/_colours.scss";
-@import "components/bower-components/guss-colours/_helpers.scss";
+@import 'components/bower-components/guss-colours/_colours.scss';
+@import 'components/bower-components/guss-colours/_helpers.scss';
 
 // MPU
 // =============================================================================
 
 $mpu-original-width: 300px;
 $mpu-original-height: 250px;
-$mpu-align-offset: 20px; // Align bottom of ad with text on desktop
+$mpu-align-offset: 20px;
+// Align bottom of ad with text on desktop
 $mpu-ad-label-height: 34px;
 
 // Scale the ad down on tablet
@@ -207,13 +197,11 @@ $mpu-target-width: gs-span(3) + $gs-gutter/2;
 $mpu-scale-ratio: $mpu-target-width/$mpu-original-width;
 $mpu-resulting-height: ceil($mpu-original-height*$mpu-scale-ratio);
 
-
 // Dimensions
 // =============================================================================
 
 $action-icon-width: 23px;
 $action-icon-rightspace: 7px;
-
 
 // Membership
 // =============================================================================
@@ -221,7 +209,7 @@ $action-icon-rightspace: 7px;
 $mem-brandOrange: #ce6f14;
 $mem-brandBlue: #82c2d6;
 $mem-brandGrey: #dcddda;
-$mem-trans-white: rgba(255,255,255,0.8);
+$mem-trans-white: rgba(255, 255, 255, .8);
 $mem-black: #333333;
 
 $mem-button-confirm: #1a4683;
