--- a/frontend/common/app/assets/stylesheets/base/_helpers.scss
+++ b/frontend/common/app/assets/stylesheets/base/_helpers.scss
@@ -3,22 +3,21 @@
 
 %u-h,
 .u-h {
-  @include u-h;
+    @include u-h;
 }
 
 .is-hidden,
 [hidden] {
-  display: none !important;
+    display: none !important;
 }
 
 .is-invisible {
-  visibility: hidden !important;
+    visibility: hidden !important;
 }
 
 .u-cf {
-  @include clearfix;
+    @include clearfix;
 }
-
 
 /**
  * Responsive media (images, videos…)
@@ -28,25 +27,25 @@
  */
 
 .u-responsive-ratio {
-  @include fix-aspect-ratio(5, 3); // 1
+    @include fix-aspect-ratio(5, 3); // 1
 
-  img,
-  object,
-  embed,
-  iframe,
-  video { // 2
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+    img,
+    object,
+    embed,
+    iframe,
+    video {
+        // 2
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 }
 
 .u-responsive-ratio--hd {
-  padding-bottom: aspect-ratio-height(16, 9);
+    padding-bottom: aspect-ratio-height(16, 9);
 }
-
 
 /**
  * Text hyphenation
@@ -57,78 +56,79 @@
  */
 
 .u-text-hyphenate {
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-all;
-  word-break: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 }
-
 
 /**
  * Fake table
  */
 
 .u-table {
-  display: table;
-}
-.u-table__row {
-  display: table-row;
-}
-.u-table__cell {
-  display: table-cell;
-  width: 10000px;
-  max-width: 100%;
-}
-.u-table__cell--top {
-  vertical-align: top;
-}
-.u-table__cell--bottom {
-  vertical-align: bottom;
-}
-.u-table__cell--collapse {
-  // Cell / row will only take the height it needs
-  height: 1px;
+    display: table;
 }
 
+.u-table__row {
+    display: table-row;
+}
+
+.u-table__cell {
+    display: table-cell;
+    width: 10000px;
+    max-width: 100%;
+}
+
+.u-table__cell--top {
+    vertical-align: top;
+}
+
+.u-table__cell--bottom {
+    vertical-align: bottom;
+}
+
+.u-table__cell--collapse {
+    // Cell / row will only take the height it needs
+    height: 1px;
+}
 
 /**
  * Reset button styles
  */
 
 .u-button-reset {
-  display: block;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  width: 100%;
-  background: transparent;
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    width: 100%;
+    background: transparent;
 
-  &:focus {
-    outline: 0;
-  }
+    &:focus {
+        outline: 0;
+    }
 }
-
 
 /**
  * Fakes text underline with a border
  */
 
 .u-underline {
-  text-decoration: none !important;
-  border-bottom: 1px solid $c-neutral4;
-  @include transition(border-color .15s ease-out);
+    text-decoration: none !important;
+    border-bottom: 1px solid $c-neutral4;
+    @include transition(border-color .15s ease-out);
 
-  &:hover,
-  &:focus {
-    border-color: mix($c-newsDefault, $c-neutral4, 50%);
-  }
-  &:active {
-    border-color: $c-newsAccent;
-  }
+    &:hover,
+    &:focus {
+        border-color: mix($c-newsDefault, $c-neutral4, 50%);
+    }
+    &:active {
+        border-color: $c-newsAccent;
+    }
 }
 
 .u-strike {
@@ -137,10 +137,10 @@
 
 .u-parens {
     &:before {
-        content: "(";
+        content: '(';
     }
     &:after {
-        content: ")";
+        content: ')';
     }
 }
 
@@ -149,5 +149,5 @@
  */
 
 .u-nobr {
-  white-space: nowrap;
+    white-space: nowrap;
 }
