--- a/frontend/common/app/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_joiner.scss
@@ -7,7 +7,7 @@ $large-card: 35px;
 
 .joiner-section {
     width: 100%;
-    border-bottom: 1px solid #DFDFDF;
+    border-bottom: 1px solid #dfdfdf;
     margin: $gs-gutter;
     padding: $gs-gutter/2;
     text-align: center;
@@ -18,7 +18,7 @@ $large-card: 35px;
 }
 
 .joiner-section--no-border {
-    border: none;
+    border: 0;
 }
 
 .joiner-navigation {
@@ -26,9 +26,8 @@ $large-card: 35px;
 }
 
 .joiner-navigation__tab {
-    width: 100%;
     text-align: center;
-    border: 1px solid #DFDFDF;
+    border: 1px solid #dfdfdf;
     display: table;
     float: left;
     width: 33.3%;
@@ -36,13 +35,13 @@ $large-card: 35px;
 
 .joiner-navigation__btn {
     @include fs-bodyCopy(4);
-    background-color: #EAEAEA;
+    background-color: #eaeaea;
     height: gs-height(2);
     width: 100%;
     vertical-align: middle;
     display: table-cell;
     &:hover {
-        background-color: darken(#EAEAEA, 15%);
+        background-color: darken(#eaeaea, 15%);
     }
 }
 
@@ -67,28 +66,26 @@ $large-card: 35px;
     width: 100%;
     text-align: center;
     padding: $gs-gutter;
-    border-bottom: 1px solid #DFDFDF;
+    border-bottom: 1px solid #dfdfdf;
 }
 
 .benefits-list--left-aligned {
-    border: none;
+    border: 0;
 }
 
 /* ==========================================================================
    Payment Form
    ========================================================================== */
 
-
 .form-primary-container {
     width: 100%;
 }
 
 .form-secondary-container {
-    border-top: 1px solid #F1F1F1;
+    border-top: 1px solid #f1f1f1;
     width: 100%;
     padding-top: $gutter;
 }
-
 
 .form__error {
     margin-bottom: $gutter/2;
@@ -99,7 +96,7 @@ $large-card: 35px;
 }
 
 .fieldset {
-    border: none;
+    border: 0;
 }
 
 .form-terms {
@@ -127,13 +124,13 @@ $large-card: 35px;
     width: 54px;
     height: $large-card;
     visibility: hidden;
-    background: url("/assets/images/card_types_large.png") right top no-repeat;
+    background: url('/assets/images/card_types_large.png') right top no-repeat;
 
     &[data-card-type] {
         visibility: visible;
     }
 
-    &[data-card-type="unknown"] {
+    &[data-card-type='unknown'] {
         visibility: hidden;
     }
 
@@ -148,24 +145,23 @@ $large-card: 35px;
     margin-right: $gutter / 2;
 }
 
-@include mq(tablet){
+@include mq(tablet) {
 
     .credit-card {
         width: 49px;
         height: $small-card;
-        background: url("/assets/images/card_types_small.png") right top no-repeat;
+        background: url('/assets/images/card_types_small.png') right top no-repeat;
 
         @include credit-card-images($small-card);
     }
 }
-
 
 /* ==========================================================================
    Thank You
    ========================================================================== */
 
 .questions {
-  @include clearfix;
+    @include clearfix;
 }
 
 .questions__list {
@@ -173,15 +169,14 @@ $large-card: 35px;
     padding: $gs-gutter/4 $gs-gutter $gs-gutter 0;
 }
 
-
 @include mq(tablet) {
-    
+
     .joiner-section {
         padding: $gs-gutter*2;
     }
 
     .benefits-list {
-        border: 1px solid #DFDFDF;
+        border: 1px solid #dfdfdf;
         height: gs-height(3);
         float: left;
         margin: $gs-gutter $gs-gutter $gs-gutter 0;
@@ -204,8 +199,8 @@ $large-card: 35px;
     }
 
     .form-secondary-container {
-        border-top: none;
-        border-left: 1px solid #F1F1F1;
+        border-top: 0;
+        border-left: 1px solid #f1f1f1;
         padding: $gutter 0 0 $gutter*3;
         float: left;
         width: 50%;
