--- a/frontend/app/views/fragments/tier/summary.scala.html
+++ b/frontend/app/views/fragments/tier/summary.scala.html
@@ -17,7 +17,7 @@
             End Date
         </td>
         <td class="summary-table__cell">
-            @prettyDate(subscription.current_period_end)
+            @subscription.current_period_end.pretty
         </td>
     </tr>
     <tr class="summary-table__row" role="row">
@@ -33,7 +33,7 @@
             Last Payment
         </td>
         <td class="summary-table__cell">
-            @prettyDate(subscription.current_period_start)
+            @subscription.current_period_start.pretty
         </td>
     </tr>
 </table>
